<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Chat</string>
    <string name="title_activity_login">设置</string>
    <string name="test">测试</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="phone_number">电话号码</string>
    <string name="identifying_code">验证码</string>
    <string name="send_identify_code">发送验证码</string>
    <string name="identify">验证</string>
    <string name="password_input">请输入密码</string>
    <string name="password_confirm">请确认密码</string>
    <string name="get_indetity_code_success">获取验证码成功</string>
    <string name="confirm_identity_code_success">验证成功</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功</string>
    <string name="logout">登出</string>
    <string name="share">分享</string>
    <string name="jpush">推送</string>
    <string name="submit">确定</string>
    <string name="uned">取消</string>
    <string name="update_success">修改成功</string>
    <string name="unable_empty">不可为空</string>

    <string name="hello">Hello World, JPush!</string>
    <string name="tag_hint">Tag为大小写字母，数字，下划线,中文， 多个用以逗号分隔</string>
    <string name="alias_hint">Alias为大小写字母，数字，下划线</string>
    <string name="style_hint">style为数字</string>
    <string name="error_style_empty">style不能为空</string>
    <string name="error_alias_empty">alias不能为空</string>
    <string name="error_tag_empty">tag不能为空</string>
    <string name="error_tag_gs_empty">格式不对</string>
    <string name="error_network">网络连接异常,初始化失败 请检查网络！</string>
    <string name="logining">程序在后台执行, 请查看日志！</string>
    <string name="setting_su">设置成功</string>

    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_nomore">已无更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_register_alidayu">RegisterAlidayuActivity</string>
    <string name="server_403">服务器拒绝服务，登陆信息过期</string>
    <string name="server_still_work">服务器仍在工作</string>
    <string name="server_500">服务器出了点小问题</string>
    <string name="say_something">说点什么吧</string>
    <string name="please_input">请输入</string>
    <string name="chat">聊天</string>
    <string name="contract">联系人</string>
    <string name="group">群组</string>
    <string name="err">出错了</string>
    <string name="title_activity_detail">详细资料</string>
    <string name="title_activity_me">我</string>
    <string name="action_settings">Settings</string>
    <string name="choose_phont">选择照片</string>
    <string name="local_pic">本地图库</string>
    <string name="phont_pic">打开相机</string>
    <string name="unread">标为未读</string>
    <string name="register1">注册通道1</string>
    <string name="register2">注册通道2</string>
    <string name="qrcode">我的二维码</string>
    <string name="title_activity_qr_code">QrCodeActivity</string>
    <string name="finish">完成</string>
    <string name="chat_user">Chat用户</string>
    <string name="feedback">反馈</string>
    <string name="reedback_success">反馈成功</string>
    <string name="restart_chat_main_activity">错误:重启ChatMainActivity</string>
    <string name="scan">扫描</string>
    <string name="cancel">取消</string>
    <string name="pick_picture_froma_blum">从相册选取</string>
    <string name="open_flash_light">开启闪光灯</string>
    <string name="wait">等一等，还没有开发完成啦 :-(</string>
    <string name="send_message">发消息</string>

    <string name="about_page_description">RenYuZhuo毕业设计</string>

    <string name="about_contact_us">Contact us</string>
    <string name="about_terms_conditions">Terms and conditions</string>
    <string name="about_instagram">Follow us on Instagram</string>
    <string name="about_facebook">Like on Facebook</string>
    <string name="about_play_store">Rate us on Play Store</string>
    <string name="about_youtube">Watch us on Youtube</string>
    <string name="about_twitter">Follow us on Twitter</string>
    <string name="about_github">Fork us on GitHub</string>
    <string name="about">关于</string>
    <string name="about_contact_me">与我联系</string>
    <string name="about_blog">介绍</string>
    <string name="please_input_phone_number">请输入对方手机号</string>
    <string name="search">查找</string>
    <string name="add_friend">添加好友</string>
    <string name="submit_friend">同意申请</string>
    <string name="nickanem">请输入昵称</string>
    <string name="exist_user">已经存在这个用户了，请直接登录</string>
    <string name="login_fail">登录失败</string>
    <string name="err_phone_number">手机号输入错误</string>
    <string name="not_same_password">密码两次输入不一致</string>
    <string name="sendding">正在发送请稍后</string>
    <string name="add_friend_success">申请已经发出</string>
    <string name="add_friend_err">已经发出过申请</string>
    <string name="not_null_password">密码不可为空</string>
    <string name="get_user_err">获取用户信息失败</string>
    <string name="me">我</string>
    <string name="restart">数据库升级成功，需要重新启动，若仍提示本消息，请卸载重新安装，是否重启？</string>
    <string name="resend">重新发送</string>
    <string name="ok">确认</string>
    <string name="hava_copy">已经复制到剪切板</string>
    <string name="copy">复制</string>
    <string name="hold_to_talk">按住说话</string>
    <string name="sliding_upwards_and_cancel_sending">向上滑动，取消发送</string>
    <string name="speak">语音</string>
    <string name="send_pic">图片</string>
    <string name="camera_pic">拍照</string>
    <string name="startRecord">开始录音</string>
    <string name="stopRecord">结束录音</string>
    <string name="startPlay">开始播放</string>
    <string name="stopPlay">结束播放</string>
    <string name="teamname">群组名称</string>
    <string name="quit">退出</string>
    <string name="add_team">加群</string>
    <string name="please_input_team_name">请输入群名称</string>
    <string name="add_team_err">加群失败</string>
    <string name="add_team_success">加群成功</string>
    <string name="create_team">创建群</string>
    <string name="type_public">公开群</string>
    <string name="type_secret">私有群</string>
    <string name="not_null_teamname">群组名称不许为空</string>
    <string name="pull_friend">加好友入群</string>
    <string name="number">请输入发送数量</string>
</resources>
