<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.renyuzhuo.chat.ChatMainActivity">
    <item
        android:id="@+id/action_me"
        android:orderInCategory="100"
        android:title="@string/title_activity_me"
        app:showAsAction="never" />

    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="never" />

    <item
        android:id="@+id/feedback"
        android:orderInCategory="100"
        android:title="@string/feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/scan"
        android:orderInCategory="100"
        android:title="@string/scan"
        app:showAsAction="never" />

    <item
        android:id="@+id/about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_friend"
        android:orderInCategory="100"
        android:title="@string/add_friend"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_team"
        android:orderInCategory="100"
        android:title="@string/add_team"
        app:showAsAction="never" />

    <item
        android:id="@+id/create_team"
        android:orderInCategory="100"
        android:title="@string/create_team"
        app:showAsAction="never" />

</menu>
